# qclint

./: .gitignore  CMakeLists.txt  Makefile  README.md  gjfcheck.cpp  go.mod
.github/workflows/: ci.yml  release.yml  tagged-manylinux.yml
cmake/: qclintConfig.cmake.in
cmd/qclint/: main.go
include/qclint/: charge_multiplicity.hpp  elements.hpp  gaussian_input.hpp  input_fix.hpp  orca_input.hpp  resource_check.hpp  user_config.hpp
qclint/: cli.go  cli_test.go  config.go  core_test.go  elements.go  fix.go  gaussian.go  orca.go  types.go
src/: charge_multiplicity.cpp  elements.cpp  gaussian_input.cpp  input_fix.cpp  orca_input.cpp  qclint.cpp  resource_check.cpp  user_config.cpp
tests/: charge_multiplicity_test.cpp  cli_failure_test.cmake  config_cli_test.cmake  fix_cli_test.cmake  gaussian_margin_test.cmake  gaussian_memory_limit_test.cmake  orca_extension_test.cmake  orca_margin_test.cmake  orca_memory_limit_test.cmake  output_cli_test.cmake  package_test.cmake  parser_fuzz.cpp
tests/data/: config  external.xyz  gaussian_cpu.gjf  gaussian_link1.gjf  gaussian_margin_config  orca_comments.inp  orca_compound.inp  orca_config  orca_invalid_state.inp  orca_margin_config  orca_multiline.inp  orca_new_job.inp  orca_simple.inp  orca_xyzfile.inp  software_memory_config  strict_config  water.gjf
tests/package_consumer/: CMakeLists.txt  main.cpp
